<resources>
    <string name="app_name">Easy Kitchen</string>
    <string name="action_settings">Cerrar Sesión</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Ingredientes">Ingredientes</string>
    <string name="Procedimiento">Procedimiento</string>
    <string name="titulo_tacos_cochinita">Tacos Cochinita Pibil</string>
    <string name="tacos_cochinita_pibil_ingredientes">1 kg de maciza de cerdo
1 taza de jugo de naranja
3 chiles habaneros en rodajas
1 cubo de achiote
3 chiles guajillo hidratados
1 taza de vinagre de manzana
½ taza de hojas de cilantro
1 cda. de orégano
1 cda. de hojas de laurel seco
4 limones
</string>
    <string name="tacos_cochinita_pibil_procedimiento">Licua el jugo, achiote, guajillo,vinagre, orégano, laurel y salpimienta. Vierte la salsa sobre la carne en una olla exprés y cósela durante 30 minutos. Mezcla la cebolla, chile, vinagre y orégano en un tazón. Sirve la cochinita en tacos, acompaña con la cebolla de manzanos y termina
con hojas de cilantro.
    </string>
    <string name="titulo_arros_leche">Arroz Con Leche</string>
    <string name="arros_con_leche_ingredientes">1 taza de arroz \n
4 tazas de agua \n
1 pieza de canela en rama \n
1 sobre de Atole Sabor Cajeta Maizena® \n
5 tazas de leche descremada \n
1/2 taza de azúcar \n
Método de preparación \n
</string>
    <string name="arros_con_leche_procedimiento">Cocer en su totalidad el arroz en las 4 tazas de agua junto con la canela. Una vez que el arroz esté listo, colar si llega a tener mucha agua, retirar la canela y reservar. -Disolver el contenido del sobre de  Maizena® Fécula de Maíz Sabor Cajeta  en 1 taza de leche. -Hervir el resto de la leche con el azúcar y cuando suelte el hervor, añadir la mezcla de Maizena® previamente disuelta. -Dejar espesar sin dejar de mover y una vez que ha tomado consistencia agregar el arroz -Cocinar todo por 5 minutos moviendo regularmente. -Repartir en 6 moldes y servir tibio o frío.
    </string>
    <string name="titulo_asado_verde">Asado Verde</string>
    <string name="asado_verde_ingredientes">
        900 grs. Lomo de Cerdo cortado en trozos pequeños · n\
250 grs. Costillita de Cerdo cortada en trozos pequeños (opcional) ·  n\
6-8 Tomatillos grandes ·  n\
2 chiles Poblanos ·  n\
2-3 chiles Jalapeños (agrega mas si te gusta mas picante) ·   n\
1 Aguacate grande o 2 aguacates medianos ·     n\
1 diente de Ajo ·    n\
¼ taza de Cilantro Fresco · n\
Sal al gusto ·  n\
Pimienta Negra al gusto ·  n\
Cominos molidos (opcional) n\
    </string>
    <string name="asado_verde_procedimiento">Pela los tomatillos y colocalos en una ollita. Quitales el rabo a los chiles y colocalos en la misma ollita con los tomatillos. Agrega el agua suficiente para que estos ingredientes se cubran y cocinalos a fuego alto por 10-15 minutos o hasta que esten blandos. n\
Ya que los tomatillos y los chiles esten blandos, colocalos en la licuadora y agregales el aguacate, el ajo, el cilantro y una taza de agua, sazona con sal y pimienta al gusto (agrega una pizca de cominos si gustas!), muele a velocidad alta hasta que todo este bien combinado en una salsa suave. Reservala por un momento. n\
En una cacerola a fuego medio-alto dora la carne de puerco, (junto a la carne dora las costillitas), puedes agregar una cucharada de aceite si crees que lo necesita.  Sazona la carne con sal y pimienta al gusto, y cocinala  por unos 15 minutos o hasta que empiece a dorarse un poco. n\
Ya que la carne tome un poquito de color,  agregale la salsa verde, agrega mas agua si lo crees necesario para que el asado no te quede muy espeso,  cubrelo con una tapadera y cocina a fuego medio-alto hasta que hierva. n\
Ya que el asado este hirviendo, prueba el sabor, agrega mas sal y pimienta si lo crees necesario, baja el fuego a lo mas bajo y continua cocinando por 15 minutos mas para que la carne termine de cocerse. Ya que la carne este bien blandita, ahora si puedes servir.

    </string>
    <string name="titulo_bunuelos">Buñuelos</string>
    <string name="bunuelos_ingredientes">
        4 huevos\n
1/4 tazas de azúcar refinada\n
1 taza de aceite vegetal\n
2 tazas de harina blanca\n
1 cucharadita de polvo para hornear\n
1 cucharadita de sal de mesa\n
1 taza de azúcar refinada\n
1 cucharadita de canela en polvo\n
aceite de canola, extra para freir. \n
    </string>
    <string name="bunuelos_procedimiento">
        En un tazón grande mezcla los huevos con 1/4 de taza de azúcar y bate hasta que espesen y cobren un color amarillo fuerte. \n
Agrega 1 taza de aceite. Mezcla por separado 1 1/2 tazas de harina, polvo para hornear y sal. \n
Incorpora gradualmente a la mezcla de huevo y revuelve bien. \n
Coloca la masa sobre una superficie enharinada (una la 1/2 taza de harina restante). Amasa bien hasta que se sienta suave. \n
Forma 16 bolsas de masa. Extiende cada una con el rodillo hasta formar círculos de aproximadamente 12 cm de diámetro. \n
Deja reposar sobre papel encerado y sin cubrir durante 10 minutos. \n
Calienta el aceite extra a 175ºC en un sartén hondo. \n
Fríe los buñuelos crudos hasta que se doren, dando vuelta 1 vez. \n
Retire el exceso de grasa con toallas de papel. \n
Espolvorea con una mezcla de azúcar y canela. Guarda en un recipiente hermético. \n
    </string>
    <string name="titulo_chiles_poblanos">Chiles Poblanos</string>
    <string name="chiles_poblanos_ingredientes">
        5 Piezas Chile poblano pelados y desvenados\n
1 Lata Frijoles refritos bayos \n
200 Gramos Queso Panela cortados en tiras \n
3 Piezas Clara de huevo \n
1 Taza Harina de trigo \n
3 Piezas Yema \n
1/2 Taza Aceite de maíz para freír \n
3 Piezas Jitomate \n
1/4 Taza Puré de tomate \n
1 Taza Agua \n
2 Cubos Concentrado de Tomate con Pollo CONSOMATE® \n
1/2 Cucharadita Orégano seco \n
2 Cucharaditas Aceite de maíz. \n
    </string>
    <string name="chiles_poblanos_procedimiento">
        Relleno\n
Rellena cada chile con 2 cucharadas de frijoles y con rebanadas de queso, ciérralos con un palillo para evitar que se salga el relleno; pásalos por la harina y reserva. \n
Licúar y freír\n
Para el caldillo, licua los jitomates, el agua, el Concentrado de Tomate con Pollo CONSOMATE® y el Orégano; cuela. En una cacerola calienta las dos cucharadas de aceite y fríe por 10 minutos o hasta que hierva. \n
Batir y freír\n
Por último, bate las claras hasta formar picos duros y agrega las yemas una por una sin dejar de batir; pasa los chiles por el capeado y fríelos en aceite caliente. Escurre sobre papel absorbente y pásalos al caldillo; sirve y ofrece. \n
Consejo culinario\n
Se recomienda mantener limpio el aceite mientras fríes los chiles para obtener mejor un mejor capeado.
    </string>
    <string name="titulo_churros">Churros</string>
    <string name="churros_ingredientes">
        250 g. harina de trigo todo uso (también se puede hacer con harina de panadería)\n
250 g. de agua\n
1 cucharadita de sal (8 gramos aproximadamente) \n
Azúcar para espolvorear\n
Aceite de oliva suave para freír o aceite de girasol\n
Papel absorbente de cocina\n
Una churrera manual o una manga pastelera con boca fina. \n
    </string>
    <string name="churros_procedimiento">
        Ponemos la harina en un bol amplio. En una cazuela calentamos el agua con la sal. \n
Cuando empiece a hervir la vertemos directamente y de una sola vez sobre la harina. Con una cuchara de madera integramos la harina con el agua. Nos quedará una masa muy pegajosa y bastante compacta. \n
Ahora vamos a introducir esta masa en una churrera o manga pastelera. Este paso es fundamental para que los churros os salgan bien y no tengáis problemas con ellos a la hora de la fritura. La churrera compacta la masa y elimina el aire. Esto evita que los churros luego nos salten en el aceite, por eso es un paso muy importante. Si tenéis máquina para hacer churros la rellenáis con la masa. La mejor opción. \n
Si no tenéis opción de hacer los churros con churrera, tenemos otra posibilidad, una manga pastelera con una boquilla en forma de estrella. Aunque no es lo recomendable, pues no quedan igual que con churrera. Aún así, hay gente que ha conseguido hacer buenos churros con manga. Las mangas pasteleras pueden ser de plástico desechable. Podéis encontrarlas en tiendas de utensilios de repostería o tiendas online de repostería creativa. \n
Vamos haciendo las porciones de churros con la masa cruda sobre un paño de cocina en la encimera. En una forma de que se vaya enfriando la masa y evitar que se abran o estallen durante la fritura. \n
Ponemos al fuego una sartén con abundante aceite de oliva muy suave o aceite de girasol.
    </string>
    <string name="titulo_dorayaky">Dorayaki</string>
    <string name="dorayaki_ingredientes">
        Huevos 2\n
Azúcar 50 g\n
Miel 15 ml\n
Harina de repostería 85 g\n
Sal una pizca\n
Levadura química 2 ml\n
Agua 40 ml\n
Aceite de oliva virgen extra\n
Anko o crema de chocolate para rellenar
    </string>
    <string name="dorayaki_procedimiento">
        Disponer los huevos en un cuenco con el azúcar y la miel. Batir con una batidora de varillas hasta que doble o casi triplique su volumen, y tenga un color pálido y textura espesa. Tamizar encima la harina con la levadura y una pizca leve de sal. Mezclar con movimientos envolventes y suaves. Incorporar el agua y tapar.\n
Dejar reposar al menos 15 minutos a temperatura ambiente. Preparar una plancha o buena sartén antiadherente engrasándola ligeramente con aceite de girasol o mantequilla fundida. Calentar a fuego medio y añadir cucharones de masa, dando forma circular con el dorso de una cuchara.\n
Cocinar hasta que salgan burbujas, deslizar por abajo una espátula y dar la vuelta. Cocinar hasta que esté bien dorado y retirar. Continuar hasta terminar la masa. Untar la mitad de las tortitas con anko, chocolate o crema y formar los dorayakis uniendo con el resto.
    </string>
    <string name="titulo_gyosa">Gyosa</string>
    <string name="titulo_agnolotti">Agnolotti</string>
    <string name="titulo_caprese">Caprese</string>
    <string name="titulo_carpaccio">Carpaccio</string>
    <string name="titulo_gnocci">Gnocci</string>
    <string name="titulo_la_polenta">La Polenta</string>
    <string name="titulo_lasana">Lasaña</string>
    <string name="titulo_minestrone">Minestrone</string>
    <string name="titulo_ossobuco">Ossobuco</string>
    <string name="titulo_pasta">Pasta</string>
    <string name="titulo_pizza">Pizza</string>
    <string name="titulo_ravioles">Ravioles</string>
    <string name="titulo_risotto">Risotto</string>
    <string name="titulo_spagetti">Spagetti</string>
    <string name="titulo_chipirones">Chipirones</string>
    <string name="chipirones_ingredientes">1 kg de chipirones (limpios).\n
2 cebollas grandes.\n
2 dientes de ajo.\n
1 vasito de coñac.\n
sal.\n
perejil picado
</string>
    <string name="chipirones_procedimiento">Tiramos de los tentáculos con cuidado, introduciendo un dedo dentro del chipirón, para poder retirar también con un solo movimiento todos los interiores.\n
Abrimos los tentáculos y tiramos de la boca para retirarla.\n
Luego haciendo presión con dos dedos en la zona en donde se unen los interiores a los tentáculos, con la otra mano tiramos de los tentáculos para separarlos.\n
También cortamos las aletas y las picamos.\n
Retiramos la pluma, que es la piel transparente que queda en el interior del chipirón.\n
Damos vuelta el chipirón, como si fuera un calcetín, para limpiarlo por dentro de cualquier resto de arena. Si son pequeños podemos solo meter un dedo dentro para limpiarlos, sin darlos vuelta.\n
Secamos con papel absorbente para eliminar el exceso de agua.</string>
</resources>