<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chipirones">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="15dp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/titulo_chipirones"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@drawable/chipirones">

        </ImageView>



        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"

                    android:orientation="vertical"

                    >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Ingredientes"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="Ingredientes" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="left"
                        android:text="@string/chipirones_ingredientes"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Procedimiento"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="398dp"
                        android:layout_margin="10dp"
                        android:gravity="left"
                        android:text="@string/chipirones_procedimiento"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>