<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RepertorioRecetasItalia">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="15dp"

        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="COMIDA ITALIANA"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="0sp"
            android:layout_marginTop="20sp"
            android:src="@drawable/italia"
            android:layout_margin="10dp"
            />



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/RecipeOne"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/agnolotti"

                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="Agnolotti"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/titulo_agnolotti"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"

                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/caprese"
                    android:onClick="Caprece"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/titulo_caprese"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/carpaccio"
                    android:onClick="Carpaccio"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/titulo_carpaccio"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/gnocchi"
                    android:onClick="Gnocci"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/titulo_gnocci"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/lapolenta"
                    android:onClick="Lapolenta"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/titulo_la_polenta"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/lasana"
                    android:orientation="vertical"
                    android:onClick="Lasana"
                    android:layout_marginVertical="10dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/titulo_lasana"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/minestrone"
                    android:orientation="vertical"
                    android:onClick="Minestrone"
                    android:layout_marginVertical="10dp"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/titulo_minestrone"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/ossobuco"
                    android:orientation="vertical"
                    android:onClick="Ossobuco"
                    android:layout_marginVertical="10dp"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/titulo_ossobuco"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/pasta"
                    android:orientation="vertical"
                    android:onClick="Pasta"
                    android:layout_marginVertical="10dp"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/titulo_pasta"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/pizza"
                    android:orientation="vertical"
                    android:onClick="Pizza"
                    android:layout_marginVertical="10dp"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/titulo_pizza"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/ravioles"
                    android:orientation="vertical"
                    android:onClick="Ravioles"
                    android:layout_marginVertical="10dp"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/titulo_ravioles"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/risoto"
                    android:orientation="vertical"
                    android:onClick="Risotto"
                    android:layout_marginVertical="10dp"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/titulo_risotto"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/spagetti"
                    android:orientation="vertical"
                    android:onClick="Spagetti"
                    android:layout_marginVertical="10dp"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/titulo_spagetti"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>